fix live chat collapse indicator

--- a/tdls/pages/single-event.scss
+++ b/tdls/pages/single-event.scss
@@ -56,7 +56,7 @@
     content: "\f139";
   }
   
-  .live-chat.btn .fa.indicator:before {
+  .live-chat.btn.collapsed .fa.indicator:before {
     content: "\f13a";
   }
 }
